--- a/assets/html/partials/sections/dashboard-interface/tools.njk
+++ b/assets/html/partials/sections/dashboard-interface/tools.njk
@@ -36,6 +36,14 @@
 {%
   set marketTable = {
     'head': {
+      'class': [
+        '',
+        '',
+        '',
+        'cs--table__cell--chart',
+        '',
+        ''
+      ],
       'list': [
         'Name',
         'Circulating Supply',
@@ -51,7 +59,7 @@
             'no-wrap',
             'no-wrap',
             'no-wrap',
-            'cs--table__cell--chart',
+            '',
             'cs--color-success',
             ''
           ],
@@ -76,7 +84,7 @@
             'no-wrap',
             'no-wrap',
             'no-wrap',
-            'cs--table__cell--chart',
+            '',
             'no-wrap cs--color-danger',
             ''
           ],
@@ -101,7 +109,7 @@
             'no-wrap',
             'no-wrap',
             'no-wrap',
-            'cs--table__cell--chart',
+            '',
             'cs--color-success',
             ''
           ],
@@ -126,7 +134,7 @@
             'no-wrap',
             'no-wrap',
             'no-wrap',
-            'cs--table__cell--chart',
+            '',
             'no-wrap cs--color-danger',
             ''
           ],
@@ -151,7 +159,7 @@
             'no-wrap',
             'no-wrap',
             'no-wrap',
-            'cs--table__cell--chart',
+            '',
             'cs--color-success',
             ''
           ],
@@ -176,7 +184,7 @@
             'no-wrap',
             'no-wrap',
             'no-wrap',
-            'cs--table__cell--chart',
+            '',
             'no-wrap cs--color-danger',
             ''
           ],
@@ -228,19 +236,19 @@
                 <tr>
                   {% for name in marketTable.head.list %}
                     {% if loop.index == 5 %}
-                      <td class="{{ value.class[loop.index - 1] }}"><b>{{ value.list[loop.index - 1] }}</b></td>
+                      <td data-label="{{ name }}" class="{{ value.class[loop.index - 1] }}"><b>{{ value.list[loop.index - 1] }}</b></td>
                     {% elif loop.index == 4 %}
-                      <td class="{{ value.class[loop.index - 1] }}">
+                      <td data-label="{{ name }}" class="{{ value.class[loop.index - 1] }}">
                         <img src="{{ value.list[loop.index - 1] }}" alt="">
                       </td>
                     {% elif loop.index == 6 %}
-                      <td class="{{ value.class[loop.index - 1] }}">
+                      <td data-label="{{ name }}" class="{{ value.class[loop.index - 1] }}">
                         <button type="button" class="cs--favorite">
                           {{ icon('star') }}
                         </button>
                       </td>
                     {% elif loop.index == 1 %}
-                      <td class="{{ value.class[loop.index - 1] }}">
+                      <td data-label="{{ name }}" class="{{ value.class[loop.index - 1] }}">
                         <div class="cs--table__card">
                           <img src="{{ value.list[loop.index - 1].imgSrc }}" alt="">
                           <div class="cs--table__card-content">
@@ -250,7 +258,7 @@
                         </div>
                       </td>
                     {% else %}
-                      <td class="{{ value.class[loop.index - 1] }}">
+                      <td data-label="{{ name }}" class="{{ value.class[loop.index - 1] }}">
                         <div class="cs--table__card-content">
                           <span class="cs--table__card-title">{{ value.list[loop.index - 1].crypto }}</span>
                           <span class="cs--table__card-abbr">{{ value.list[loop.index - 1].abbr }}</span>
