--- a/assets/html/partials/components/table.njk
+++ b/assets/html/partials/components/table.njk
@@ -12,7 +12,7 @@
         {% for value in data.body %}
           <tr>
             {% for name in data.head.list %}
-              <td class="{{ value.class[loop.index - 1] }}">{{ value.list[loop.index - 1] }}</td>
+              <td data-label="{{ name }}" class="{{ value.class[loop.index - 1] }}"><span>{{ value.list[loop.index - 1] }}</span></td>
             {% endfor %}
           </tr>
         {% endfor %}
