--- a/scss/abstracts/variables.scss
+++ b/scss/abstracts/variables.scss
@@ -104,7 +104,7 @@ $media-expressions: (
   --color-green-60: hsl(175, 49%, 40%);
   --color-red: hsl(0, 83%, 70%);
   --color-yellow: hsl(43, 98%, 37%);
-  --c: #ECF0FF;
+  // --c: #ecf0ff;
 
   --grad-blue: linear-gradient(86.88deg, #00c6fb 1.95%, #005bea 97.83%);
   --grad-orange: linear-gradient(271.95deg, #fb7e37 14.29%, #ff9a44 98.96%);
